button was invisible on iPhone SE fix

--- a/src/app/scenes/donation/donation/donation.component.scss
+++ b/src/app/scenes/donation/donation/donation.component.scss
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-bottom: 105px;
+    margin-bottom: 15vh;
 }
 
 .payment-method__tile {
